[tool.poetry]
name = "prefect-demo"
version = "0.1.0"
description = ""
authors = ["jeffnb <jeffnb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prefect = {extras = ["viz"], version = "^0.14.21"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
